init-替换数据源，从之前的数据库连接改为 gql