@@ -1,8 +1,6 @@
 package com.deepmodel.relation.service;
 
-import com.deepmodel.relation.enums.ErrorCategory;
-import com.deepmodel.relation.enums.ExpressionType;
-import com.deepmodel.relation.enums.SeverityLevel;
+import com.deepmodel.relation.model.BaseappObjectField;
 import com.deepmodel.relation.model.ValidationReport;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -11,6 +9,7 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
@@ -33,10 +32,13 @@ public class ExpressionValidatorServiceTest {
 
     @Test
     public void testCheckSingleObject_Success() {
-        when(impactAnalyzerService.getAllFields()).thenReturn(Collections.emptyList());
-        
+        BaseappObjectField field = new BaseappObjectField();
+        field.setObjectType("ArReceipt");
+        field.setName("amount");
+        when(impactAnalyzerService.getAllFields()).thenReturn(List.of(field));
+
         ValidationReport report = validatorService.checkSingleObject("ArReceipt");
-        
+
         assertEquals(0, report.getTotalErrors());
     }
 }
